<resources>
    <string name="app_name">Calcolatrice</string>
    <string name="title_activity_start">Start</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="convertìtore">CONVERTITORE</string>
    <string name="calcolatrice">CALCOLATRICE</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ciao_proviamo">Ciao, proviamo</string>
    <string name="nickname">NICKNAME</string>
    <string name="bottone">ACCEDI</string>
    <string name="title_activity_calc">Activity_calc</string>
    <string name="uno">1</string>
    <string name="due">2</string>
    <string name="tre">3</string>
    <string name="quattro">4</string>
    <string name="cinque">5</string>
    <string name="sei">6</string>
    <string name="sette">7</string>
    <string name="otto">8</string>
    <string name="nove">9</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="esponente">^</string>
    <string name="parentesi">( )</string>
    <string name="divisione">÷</string>
    <string name="moltiplicazione">×</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="addsub">+/-</string>
    <string name="punto">.</string>
    <string name="uguale">=</string>
    <string name="spazio"> </string>
    <string name="display">Inserisci un valore</string>
    <string name="grafico"> Grafico</string>
    <string name="cronologia">Cronologia </string>
    <string name="percentuale">%</string>
    <string name="seno">sin</string>
    <string name="coseno">cos</string>
    <string name="tangente">tan</string>
    <string name="arcseno">sin<sup><small>-1</small></sup></string>
    <string name="arccoseno">cos<sup><small>-1</small></sup></string>
    <string name="arctangente">tan<sup><small>-1</small></sup></string>
    <string name="logaritmo_naturale">ln</string>
    <string name="logaritmo">log</string>
    <string name="radice">√</string>
    <string name="modulo">|x|</string>
    <string name="pigreco">π</string>
    <string name="nepero">e</string>
    <string name="xQuadro">x<sup><small>2</small></sup></string>
    <string name="potenza">x<sup><small>y</small></sup></string>
    <string name="primo">prime</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="scrivix">x</string>
    <string name="scriviy">y</string>
    <string name="funzione">f(x)</string>
    <string name="fattoriale">!</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="lunghezza">LUNGHEZZA</string>
    <string name="massa">MASSA</string>
    <string name="tempo">TEMPO</string>
    <string name="angolo">ANGOLO</string>
    <string name="temperatura">TEMPERATURA</string>
    <string name="converti">CONVERTI</string>
    <string name="integrale">∫</string>
    <string name="derivata">fʼ(x)</string>
    <string name="maggiore">></string>
    <string name="and">&amp;</string>
    <string name="or">|</string>
    <string name="base">BASI DI NUMERI</string>



    <string-array name="lunghezza">
        <item>metri</item>
        <item>centimetri</item>
        <item>millimetri</item>
        <item>miglio</item>
        <item>feet</item>
        <item>inches</item>
    </string-array>
    <string-array name="massa">
        <item>chilogrammi</item>
        <item>grammi</item>
        <item>decagrammo</item>
        <item>ettogrammo</item>
        <item>quintale</item>
        <item>tonnellata</item>
        <item>decigrammo</item>
        <item>centigrammo</item>
        <item>milligrammo</item>
        <item>microgrammo</item>
        <item>nanogrammo</item>
        <item>picogrammo</item>

    </string-array>
    <string-array name="tempo">
        <item>millisecondi</item>
        <item>secondi</item>
        <item>minuti</item>
        <item>ore</item>
        <item>giorni</item>
        <item>anni</item>

    </string-array>
    <string-array name="angolo">
        <item>gradi</item>
        <item>radianti</item>
        <item>sestante</item>
        <item>giro</item>
        <item>mils</item>

    </string-array>
    <string-array name="temperatura">
        <item>Celsius</item>
        <item>grado Fahrenheit</item>
        <item>Kelvin</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
