<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".Activity_calc">





    <include layout="@layout/main_toolbar" />

    <TextView
        android:id="@+id/risultato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:textAlignment="textEnd"
        android:inputType="textPersonName"
        android:hint="@string/display"
        android:textColorHint="@color/greyAccent"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="clear"
            android:text="@string/clear"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spazio" />

        <Button
            android:id="@+id/parentesi"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="parentesi"
            android:text="@string/parentesi"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toBottomOf="@+id/spazio" />

        <Button
            android:id="@+id/esponente"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="esponente"
            android:text="@string/esponente"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/parentesi"
            app:layout_constraintTop_toBottomOf="@+id/spazio" />

        <Button
            android:id="@+id/divisione"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="divisione"
            android:text="@string/divisione"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/esponente"
            app:layout_constraintTop_toBottomOf="@+id/spazio" />

        <Button
            android:id="@+id/sette"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="sette"
            android:text="@string/sette"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear" />

        <Button
            android:id="@+id/otto"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="otto"
            android:text="@string/otto"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/sette"
            app:layout_constraintTop_toBottomOf="@+id/parentesi" />

        <Button
            android:id="@+id/nove"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="nove"
            android:text="@string/nove"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/otto"
            app:layout_constraintTop_toBottomOf="@+id/esponente" />

        <Button
            android:id="@+id/moltiplicazione"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="moltiplicazione"
            android:text="@string/moltiplicazione"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/nove"
            app:layout_constraintTop_toBottomOf="@+id/divisione" />

        <Button
            android:id="@+id/quattro"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="quattro"
            android:text="@string/quattro"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sette" />

        <Button
            android:id="@+id/cinque"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="cinque"
            android:text="@string/cinque"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/quattro"
            app:layout_constraintTop_toBottomOf="@+id/otto" />

        <Button
            android:id="@+id/sei"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="sei"
            android:text="@string/sei"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/cinque"
            app:layout_constraintTop_toBottomOf="@+id/nove" />

        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="sub"
            android:text="@string/sub"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/sei"
            app:layout_constraintTop_toBottomOf="@+id/moltiplicazione" />

        <Button
            android:id="@+id/uno"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="uno"
            android:text="@string/uno"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quattro" />

        <Button
            android:id="@+id/due"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="due"
            android:text="@string/due"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/uno"
            app:layout_constraintTop_toBottomOf="@+id/cinque" />

        <Button
            android:id="@+id/tre"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="tre"
            android:text="@string/tre"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/due"
            app:layout_constraintTop_toBottomOf="@+id/sei" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="add"
            android:text="@string/add"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/tre"
            app:layout_constraintTop_toBottomOf="@+id/sub" />

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="zero"
            android:text="@string/zero"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/due"
            app:layout_constraintStart_toStartOf="@+id/uno"
            app:layout_constraintTop_toBottomOf="@+id/uno" />

        <Button
            android:id="@+id/punto"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botton_circle"
            android:onClick="punto"
            android:text="@string/punto"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/tre" />

        <Button
            android:id="@+id/uguale"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_equals"
            android:onClick="uguale"
            android:text="@string/uguale"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/punto"
            app:layout_constraintTop_toBottomOf="@+id/add" />

        <ImageButton
            android:id="@+id/spazio"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/botton_circle"
            android:contentDescription="@string/spazio"
            android:onClick="spazio"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="@+id/divisione"
            app:layout_constraintStart_toStartOf="@+id/divisione"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/spazio" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>