<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <TextView
        android:id="@+id/massa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/massa"
        android:layout_gravity="center"
        android:textColor="@color/tanAccent"
        android:textSize="27sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textFrom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/tanAccent"
            android:text="@string/from"
            android:textSize="23sp"
            />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="30dp" />


        <TextView
            android:id="@+id/textTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/tanAccent"
            android:layout_marginEnd="155dp"
            android:text="@string/to"
            android:textSize="23sp"
            />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="30dp" />

        <EditText
            android:id="@+id/TextNumber2"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:inputType="number" />

        <Button
            android:id="@+id/converti1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botton_circle"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="30dp"
            android:text="@string/converti"
            android:textColor="@color/tanAccent"

            />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:inputType="number" />
    </LinearLayout>
</LinearLayout>
